Fix text wrapping for community posts

--- a/src/renderer/components/ft-community-post/ft-community-post.scss
+++ b/src/renderer/components/ft-community-post/ft-community-post.scss
@@ -66,6 +66,11 @@
   }
 }
 
+.postText {
+  overflow-wrap: break-word;
+  white-space: pre-wrap;
+}
+
 .bottomSection {
   color: var(--tertiary-text-color);
   display: block;
